--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <script src="./node_modules/preline/dist/preline.js"></script>
+    <script type="module" src="./node_modules/preline/dist/preline.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   </body>
 </html>
